--- a/.github/workflows/Frontend_CI.yml
+++ b/.github/workflows/Frontend_CI.yml
@@ -2,7 +2,7 @@ name: Frontend_CI
 
 on:
   pull_request:
-    branches: [ "develop" ]
+    branches: ['develop']
 
 jobs:
   build:
@@ -10,19 +10,30 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, run build and test
-      run: |
-        npm ci
-        npm run build
-        npm run lint
-        npm test
-      env:
-        CI: true
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Lint and Format
+        run: |
+          npm run lint
+          npm run lint:fix
+          npm run format
+
+      - name: Run build
+        run: npm run build
+
+      - name: Run tests
+        run: npm test
+        env:
+          CI: true
