--- a/.github/workflows/Frontend_CI.yml
+++ b/.github/workflows/Frontend_CI.yml
@@ -24,11 +24,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint and Format
+      - name: Lint
         run: |
           npm run lint
           npm run lint:fix
-          npm run format
 
       - name: Run build
         run: npm run build
