--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "styled-components": "^6.1.11",
+    "tss-react": "^4.9.10",
     "yup": "^1.4.0"
   },
   "devDependencies": {
