fix [VIDL-259]: Create alias path for components, change the logic PromoStore, create MainLayout, format code

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,7 +27,8 @@
       "layouts/*": ["layouts/*"],
       "types/*": ["types/*"],
       "theme/*": ["theme/*"],
-      "stores/*": ["stores/*"]
+      "stores/*": ["stores/*"],
+      "components/*": ["components/*"]
     }
   },
   "include": ["src"]
