feat [VIDL-307]: Create api for get, add, edit, delete promos; fix promos components, update promoStore; format code

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,7 +28,8 @@
       "types/*": ["types/*"],
       "theme/*": ["theme/*"],
       "stores/*": ["stores/*"],
-      "components/*": ["components/*"]
+      "components/*": ["components/*"],
+      "api/*": ["api/*"]
     }
   },
   "include": ["src"]
