--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "mobx": "^6.13.0",
     "mobx-react-lite": "^4.0.7",
+    "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
