--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,6 +1,20 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ],
+    [
+      "babel-preset-vite",
+      {
+        "env": true,
+        "glob": false
+      }
+    ],
     [
       "@babel/preset-react",
       {
