--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
-    "jest-environment-jsdom": "^29.7.0",
     "mobx": "^6.13.0",
     "mobx-react-lite": "^4.0.7",
     "pica": "^9.0.1",
@@ -35,7 +34,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@testing-library/jest-dom": "^6.4.6",
@@ -47,6 +46,7 @@
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-jest": "^29.7.0",
+    "babel-preset-vite": "^1.1.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -54,6 +54,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.2",
     "ts-node": "^10.9.2",
